<resources>
    <string name="app_name">Exercício 2_1</string>
    <string name="texto1">Valor Inicial</string>
    <string name="texto2">Valor em R$. Ex: R$1700.00</string>
    <string name="texto3">Aplicação Mensal</string>
    <string name="texto4" translatable="false">Ex: R$100.00</string>
    <string name="texto5">Tempo da Aplicação</string>
    <string name="texto6">Em meses</string>
    <string name="texto7">Aplicação Mensal</string>
    <string name="texto8" translatable="false">Ex: R$0.02</string>
    <string name="texto9">Continuar</string>
    <string name="poupanca">Poupança</string>
</resources>
